# template-stm32f1xx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-variants.yaml  main.c
.devcontainer/: devcontainer.json
Controller/: stm32f1xx_it.c
